--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="project4.html">
+										<h2>My Music</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Snapshots into some music that I've written across the years.</p>
 										</div>
 									</a>
 								</article>
