creation of poem pages

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi! I'm Faith, and this is where I share the things I've created,
+								<h1>Hi, I'm Faith! This is where I share the things I've created,
 								from data projects to music, writing, and more. <br />
 								Feel free to explore and see what I've been working on! </a></h1>
 								<p> I am a junior at Cornell University who loves storytelling more than almost anything else. From writing poetry to composing music to working on data science projects, I try to find beauty in the world by bringing my ideas to life :) </p>
@@ -98,7 +98,7 @@
 								
 
 							</p>
-							<h2 style="text-align: center;">Personal Projects</h2>
+							<h2 style="text-align: center;">Personal</h2>
 							<section class="tiles">
 								<article class="style4">
 									<span class="image">
@@ -115,10 +115,10 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
+									<a href="project5.html">
+										<h2>Poetry</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Poems + song lyrics</p>
 										</div>
 									</a>
 								</article>
