--- a/project2.html
+++ b/project2.html
@@ -18,7 +18,7 @@
 
 					<!-- Logo -->
 					<a href="index.html" class="logo">
-						<span class="symbol"><img src="images/logo.svg" alt="" /></span>
+						<span class="symbol"><img src="images/star.png" alt="" /></span>
 						<span class="title">My Projects</span>
 					</a>
 
