more poem stuff

--- a/project5.html
+++ b/project5.html
@@ -65,11 +65,21 @@
 
         <section style="margin-bottom: 3rem;">
           <h2>Poem 2 Title</h2>
-          <p>A brief description or inspiration behind Poem 2.</p>
+          <p>a girl doesn't realize the beauty in what she has until it's too late</p>
           <blockquote class="poem-snapshot">
-            This is a brief, elegant snapshot from the poem that captures its mood or theme.
+            <pre>
+            “Apples are just boring” – I said
+            sifting and sorting through the red
+            sweet and crunchy for too long a time
+            so I decided to add a squeeze of lime
+
+            It brought a freshness to my lungs
+            but citric acid stung my tongue
+            I glanced at all the different brands
+            of rainbow I had at my hands
+            </pre>
           </blockquote>
-          <p><a href="poem2.html" class="button">Read Poem 2</a></p>
+          <p><a href="poem2.html" class="button">Read Full Poem</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
@@ -93,7 +103,7 @@
       </div>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer id="footer">
       <div class="inner">
         <section>
@@ -101,7 +111,7 @@
           <p>Email: <a href="mailto:fsg27@cornell.edu">fsg27@cornell.edu</a></p>
         </section>
       </div>
-    </footer>
+    </footer> -->
 
   </div>
 
