done with the poems

--- a/poem3.html
+++ b/poem3.html
@@ -1,8 +1,7 @@
-<!DOCTYPE HTML>
 <!-- Poem Detail Page -->
 <html>
 <head>
-  <title>what remains of us</title>
+  <title>art</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -28,45 +27,55 @@
     <!-- Main -->
     <div id="main">
       <div class="inner">
-        <h1>what remains of us</h1>
+        <h1>I thought I was art</h1>
         
         <article class="poem-text" style="white-space: pre-wrap; font-size: 1.2rem; line-height: 1.6;">
             <pre>
-There was a line I crossed that day
-The day I left you at the bend
-It hit me as I walked away
-And saw the line drawn in the sand
+                I thought I was art
 
-Grass and stone and silver stream
-Lines pattern out mosaic walls
-Landscapes are not what they seem
-Both villainous and prosaic falls
+                My canvas smooth
+                Unmarked in youth
+                I took for granted its unblemished state
+                First brushes soft
+                As others scoffed
+                Their visions they could not relate
 
-Across the sand we tripped the light
-Borders scattered in many grains
-From dawn of day to break of night
-We rejoiced in absent chains
+                I thought I was art
 
-But beneath fluid crystal sea
-Lay permanence etched in rock
-And amid our crossing free
-I stumbled o’er this cardinal lock
+                Knives that drew
+                Dark lines that grew
+                Like swirls of smoke or toxic vapor
+                With each stroke
+                Something broke
+                And crimson splattered across the paper
 
-A shifting trembled throughout the earth
-And sand was lost in fault and crack
-My footprints defaced your self-worth
-Nothing I did could bring it back
+                I thought I was art
 
-And even after the shaking’s quell
-My heel-print remained carved in stone
-The bond between us decayed and fell
-We still danced but now alone
+                Countless colors
+                Outshine others
+                I tore myself into a sketch
+                I thought that they
+                Would finally say
+                That I was more than just a wretch
 
-A bridge of gold was burned that day
-A remnant monument of loss
-And now I take care not to stray
-Over the line I shouldn’t cross
+                I thought I was art
 
+                Streaks here to stay
+                Still on display
+                Red lines became my nirvana
+                It’s so perverse
+                Cannot reverse
+                I guess I fancied myself a Madonna
+
+
+                Am I art?
+
+                I rejoice
+                In my new choice
+                Pain had clouded my artistic vision back then
+                Heal my heart
+                For I am art
+                And I will never paint again
             </pre>
         </article>
 
@@ -77,7 +86,7 @@ Over the line I shouldn’t cross
       </div>
     </div>
 
-    <!-- Footer 
+    <!-- Footer -->
     <footer id="footer">
       <div class="inner">
         <section>
@@ -86,7 +95,7 @@ Over the line I shouldn’t cross
         </section>
       </div>
     </footer>
--->
+
   </div>
 
   <!-- Scripts -->
