--- a/poem4.html
+++ b/poem4.html
@@ -1,8 +1,7 @@
-<!DOCTYPE HTML>
 <!-- Poem Detail Page -->
 <html>
 <head>
-  <title>what remains of us</title>
+  <title>the frost</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -28,44 +27,25 @@
     <!-- Main -->
     <div id="main">
       <div class="inner">
-        <h1>what remains of us</h1>
+        <h1>the frost</h1>
         
         <article class="poem-text" style="white-space: pre-wrap; font-size: 1.2rem; line-height: 1.6;">
             <pre>
-There was a line I crossed that day
-The day I left you at the bend
-It hit me as I walked away
-And saw the line drawn in the sand
-
-Grass and stone and silver stream
-Lines pattern out mosaic walls
-Landscapes are not what they seem
-Both villainous and prosaic falls
-
-Across the sand we tripped the light
-Borders scattered in many grains
-From dawn of day to break of night
-We rejoiced in absent chains
-
-But beneath fluid crystal sea
-Lay permanence etched in rock
-And amid our crossing free
-I stumbled o’er this cardinal lock
-
-A shifting trembled throughout the earth
-And sand was lost in fault and crack
-My footprints defaced your self-worth
-Nothing I did could bring it back
-
-And even after the shaking’s quell
-My heel-print remained carved in stone
-The bond between us decayed and fell
-We still danced but now alone
-
-A bridge of gold was burned that day
-A remnant monument of loss
-And now I take care not to stray
-Over the line I shouldn’t cross
+                You crept in like the frost that signals the beginning of a long winter
+                I looked at you with the same wonder that I save for the stars
+                At first you were so delicate – so beautiful – in shards
+                But your love made up for the cuts on my hands
+                I remember I took such care to not shatter you
+                But then you grew – and so quickly too
+                and consumed the leaves, the trees
+                the cold ground bruised my knees
+                and before I even knew it I sat
+                in the cold air, surrounded
+                by icicles that tore skin
+                I loved you hard
+                but you had
+                no regard
+                for me
 
             </pre>
         </article>
@@ -86,9 +66,8 @@ Over the line I shouldn’t cross
         </section>
       </div>
     </footer>
--->
-  </div>
 
+  </div> -->
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/skel.min.js"></script>
