--- a/project5.html
+++ b/project5.html
@@ -84,18 +84,37 @@
 
         <section style="margin-bottom: 3rem;">
           <h2>Poem 3 Title</h2>
-          <p>A brief description or inspiration behind Poem 3.</p>
+          <p>This poem is about the blurring of the lines between art and harm</p>
           <blockquote class="poem-snapshot">
-            This is a brief, elegant snapshot from the poem that captures its mood or theme.
+            <pre>
+            I thought I was art
+
+            My canvas smooth
+            Unmarked in youth
+            I took for granted its unblemished state
+            First brushes soft
+            As others scoffed
+            Their visions they could not relate
+
+            </pre>
           </blockquote>
           <p><a href="poem3.html" class="button">Read Poem 3</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
-          <h2>Poem 4 Title</h2>
-          <p>A brief description or inspiration behind Poem 4.</p>
+          <h2>the frost</h2>
+          <p>Internal rhymes and structural changes show how the reader comes to a realization about a loss</p>
           <blockquote class="poem-snapshot">
-            This is a brief, elegant snapshot from the poem that captures its mood or theme.
+            <pre>
+            You crept in like the frost that signals the beginning of a long winter
+            I looked at you with the same wonder that I save for the stars
+            At first you were so delicate – so beautiful – in shards
+            But your love made up for the cuts on my hands
+            I remember I took such care to not shatter you
+            But then you grew – and so quickly too
+            and consumed the leaves, the trees
+            the cold ground bruised my knees
+            </pre>
           </blockquote>
           <p><a href="poem4.html" class="button">Read Poem 4</a></p>
         </section>
