--- a/poem2.html
+++ b/poem2.html
@@ -66,7 +66,7 @@
         </article>
 
         <div style="margin-top: 2rem;">
-          <a href="poems.html" class="button" style="margin-right: 1rem;">← Back to Poems Showcase</a>
+          <a href="project5.html" class="button" style="margin-right: 1rem;">← Back to Poems Showcase</a>
           <a href="index.html" class="button">← Back to Home</a>
         </div>
       </div>
