nearly final edits

--- a/project3.html
+++ b/project3.html
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 
-			<!-- Footer -->
+			<!-- Footer
 			<footer id="footer">
 				<div class="inner">
 					<section>
@@ -83,7 +83,8 @@
 				</div>
 			</footer>
 
-		</div>
+		</div> 
+	-->
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
