--- a/project4.html
+++ b/project4.html
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer id="footer">
       <div class="inner">
         <section>
@@ -96,7 +96,7 @@
       </div>
     </footer>
 
-  </div>
+  </div> -->
 
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
