--- a/index.html
+++ b/index.html
@@ -126,11 +126,8 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+									<a href="project6.html">
+										<h2>About Me</h2>
 									</a>
 								</article>
 							</section>
