--- a/project2.html
+++ b/project2.html
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 
-			<!-- Footer -->
+			<!-- Footer 
 			<footer id="footer">
 				<div class="inner">
 					<section>
@@ -95,7 +95,7 @@
 			</footer>
 
 		</div>
-
+	-->
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
