some mistakes fixed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a href="project1.html">
 										<h2>Gambling Addiction in High School Students</h2>
 										<div class="content">
-											<p>This research paper I co-authored for ECON3120 examines various biological and socioeconomic factors that may contribute to gambling behaviors in</p>
+											<p>This research paper I co-authored for ECON3120 examines various biological and socioeconomic factors that may contribute to gambling behaviors in adolescents.</p>
 										</div>
 									</a>
 								</article>
@@ -107,7 +107,7 @@
 									<a href="project4.html">
 										<h2>My Music</h2>
 										<div class="content">
-											<p>Snapshots into some music that I've written across the years.</p>
+											<p>Snapshots of some music that I've written across the years.</p>
 										</div>
 									</a>
 								</article>
