changing header colors to black

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Personal Website</title>
+		<title>Faith Guan's Personal Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,8 +53,7 @@
 							<header>
 								<h1>Hi, I'm Faith! This is where I share the things I've created,
 								from data projects to music, writing, and more. <br />
-								Feel free to explore and see what I've been working on! </a></h1>
-								<p> I am a junior at Cornell University who loves storytelling more than almost anything else. From writing poetry to composing music to working on data science projects, I try to find beauty in the world by bringing my ideas to life :) </p>
+								Feel free to explore and see what I've been working on :) </a></h1>
 							</header>
 							<h2 style="text-align: center;">Data Analysis Projects</h2>
 							<section class="tiles">
