trying to rename sites and organize

--- a/educationandfutureearnings.html
+++ b/educationandfutureearnings.html
@@ -2,7 +2,7 @@
 <!-- Project Detail Page -->
 <html>
 	<head>
-		<title>Project 2 – The Impact of College on Income</title>
+		<title>The Impact of Undergraduate Education on Future Earnings</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
