--- a/gamblingbehaviorsinadolescents.html
+++ b/gamblingbehaviorsinadolescents.html
@@ -2,7 +2,7 @@
 <!-- Project Detail Page -->
 <html>
 	<head>
-		<title>Project 1 – Gambling Behaviors in High School Students: Nature vs. Nurture</title>
+		<title>Gambling Behaviors in High School Students: Nature vs. Nurture</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
