--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="project1.html">
+									<a href="gamblingbehaviorsinadolescents.html">
 										<h2>Gambling Addiction in High School Students</h2>
 										<div class="content">
 											<p>This research paper I co-authored for ECON3120 examines various biological and socioeconomic factors that may contribute to gambling behaviors in adolescents.</p>
@@ -72,7 +72,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="project2.html">
+									<a href="educationandfutureearnings.html">
 										<h2>The Impact of Undergraduate Education on Future Earnings</h2>
 										<div class="content">
 											<p>This term paper written for ORIE3120 aims to assess what factors in undergraduate education have an impact on income.</p>
@@ -83,7 +83,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="project3.html">
+									<a href="crimeinChicago.html">
 										<h2>Crime in Chicago</h2>
 										<div class="content">
 											<p>This Data Science Project explores various factors that contribute to crime rates across districts in Chicago.</p>
@@ -103,7 +103,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="project4.html">
+									<a href="mymusic.html">
 										<h2>My Music</h2>
 										<div class="content">
 											<p>Snapshots of some music that I've written across the years.</p>
@@ -114,7 +114,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="project5.html">
+									<a href="poetryshowcase.html">
 										<h2>Poetry</h2>
 										<div class="content">
 											<p>Poems + song lyrics</p>
@@ -125,7 +125,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="project6.html">
+									<a href="aboutme.html">
 										<h2>About Me</h2>
 									</a>
 								</article>
