--- a/mymusic.html
+++ b/mymusic.html
@@ -2,7 +2,7 @@
 <!-- Project 4 – Music Showcase -->
 <html>
 <head>
-  <title>Project 4 – Music Showcase</title>
+  <title>My Music</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
     <!-- Main -->
     <div id="main">
       <div class="inner">
-        <h1>Music Showcase</h1>
+        <h1>My Music</h1>
         
         <section style="margin-bottom: 3rem;">
             <h2>Windows</h2>
