--- a/poetryshowcase.html
+++ b/poetryshowcase.html
@@ -2,7 +2,7 @@
 <!-- Poems Showcase Page -->
 <html>
 <head>
-  <title>Poems Showcase</title>
+  <title>Poetry Showcase</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -41,7 +41,7 @@
     <!-- Main -->
     <div id="main">
       <div class="inner">
-        <h1>Poems Showcase</h1>
+        <h1>Poetry Showcase</h1>
 
 
         <section style="margin-bottom: 3rem;">
@@ -60,7 +60,7 @@
             We still danced but now alone
             </pre>
           </blockquote>
-          <p><a href="poem1.html" class="button">Read Full Poem</a></p>
+          <p><a href="fullpoems/whatremainsofus.html" class="button">Read Full Poem</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
