fixed folder and layer issues

--- a/poetryshowcase.html
+++ b/poetryshowcase.html
@@ -49,6 +49,7 @@
           <p>This poem was inspired by the idea of dancing being a metaphor for the crossing of personal boundaries.</p>
           <blockquote class="poem-snapshot">
         <pre>
+
             A shifting trembled throughout the earth
             And sand was lost in fault and crack
             My footprints defaced your self-worth
@@ -60,14 +61,15 @@
             We still danced but now alone
             </pre>
           </blockquote>
-          <p><a href="fullpoems/whatremainsofus.html" class="button">Read Full Poem</a></p>
+          <p><a href="whatremainsofus.html" class="button">Read Full Poem</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
-          <h2>Poem 2 Title</h2>
+          <h2>fruit salad</h2>
           <p>a girl doesn't realize the beauty in what she has until it's too late</p>
           <blockquote class="poem-snapshot">
             <pre>
+
             “Apples are just boring” – I said
             sifting and sorting through the red
             sweet and crunchy for too long a time
@@ -79,26 +81,29 @@
             of rainbow I had at my hands
             </pre>
           </blockquote>
-          <p><a href="poem2.html" class="button">Read Full Poem</a></p>
+          <p><a href="fruitsalad.html" class="button">Read Full Poem</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
-          <h2>Poem 3 Title</h2>
-          <p>This poem is about the blurring of the lines between art and harm</p>
+          <h2>House Fire</h2>
+          <p>This poem is about someone with severe anxiety</p>
           <blockquote class="poem-snapshot">
             <pre>
-            I thought I was art
 
-            My canvas smooth
-            Unmarked in youth
-            I took for granted its unblemished state
-            First brushes soft
-            As others scoffed
-            Their visions they could not relate
-
+              I thought my house was on fire
+              So I pulled on some clothes and slid out of bed
+              And ran downstairs to see only darkness instead
+              I checked all the stoves, the pans and the steel
+              But all I saw were the orange flames that had just seemed so real
+              
+              I thought my house was on fire
+              So I dropped all my files and raced to my car
+              Examined each wire and door left ajar
+              I wondered which of my senses had played this cruel joke
+              For I was still choking on each tendril of smoke    
             </pre>
           </blockquote>
-          <p><a href="poem3.html" class="button">Read Poem 3</a></p>
+          <p><a href="housefire.html" class="button">Read Poem 3</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
@@ -106,6 +111,7 @@
           <p>Internal rhymes and structural changes show how the reader comes to a realization about a loss</p>
           <blockquote class="poem-snapshot">
             <pre>
+              
             You crept in like the frost that signals the beginning of a long winter
             I looked at you with the same wonder that I save for the stars
             At first you were so delicate – so beautiful – in shards
@@ -116,7 +122,7 @@
             the cold ground bruised my knees
             </pre>
           </blockquote>
-          <p><a href="poem4.html" class="button">Read Poem 4</a></p>
+          <p><a href="thefrost.html" class="button">Read Poem 4</a></p>
           <p><a href="index.html" class="button">← Back to Home</a></p></p>
         </section>
 
