--- a/aboutme.html
+++ b/aboutme.html
@@ -89,7 +89,7 @@
             <p>
               Thanks for stopping by!
             </p>
-            <p><a href="index.html" class="button">← Back to Home</a></p>
+            <p><a href="index.html" class="button">← Home</a></p>
           </section>
 
         </div>
