--- a/gamblingbehaviorsinadolescents.html
+++ b/gamblingbehaviorsinadolescents.html
@@ -68,7 +68,7 @@
                       <li>Shubham Mohole</li>
                       <li>Danish Safdariyan</li>
                     </ul>
-					<a href="index.html" class="button">← Back to Projects</a>
+					<a href="index.html" class="button">← Home</a>
                 
 				</div>
 			</div>
