--- a/poetryshowcase.html
+++ b/poetryshowcase.html
@@ -45,8 +45,8 @@
 
 
         <section style="margin-bottom: 3rem;">
-          <h2>what remains of us</h2>
-          <p>This poem was inspired by the idea of dancing being a metaphor for the crossing of personal boundaries.</p>
+          <h2 class="poem-snapshot-title">what remains of us</h2>
+          <p class="poem-blurb">dancing is used as a metaphor for someone who crossed a personal boundary</p>
           <blockquote class="poem-snapshot">
         <pre>
 
@@ -61,12 +61,12 @@
             We still danced but now alone
             </pre>
           </blockquote>
-          <p><a href="whatremainsofus.html" class="button">Read Full Poem</a></p>
+          <p><a href="whatremainsofus.html" class="poem-link">Read Full Poem →</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
-          <h2>fruit salad</h2>
-          <p>a girl doesn't realize the beauty in what she has until it's too late</p>
+          <h2 class="poem-snapshot-title">fruit salad</h2>
+          <p class="poem-blurb">a girl doesn't realize the beauty in what she has until it's too late</p>
           <blockquote class="poem-snapshot">
             <pre>
 
@@ -81,12 +81,12 @@
             of rainbow I had at my hands
             </pre>
           </blockquote>
-          <p><a href="fruitsalad.html" class="button">Read Full Poem</a></p>
+          <p><a href="fruitsalad.html" class="poem-link">Read Full Poem →</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
-          <h2>House Fire</h2>
-          <p>This poem is about someone with severe anxiety</p>
+          <h2 class="poem-snapshot-title">House Fire</h2>
+          <p class="poem-blurb">a person's fear leads them to do things against their will</p>
           <blockquote class="poem-snapshot">
             <pre>
 
@@ -103,15 +103,15 @@
               For I was still choking on each tendril of smoke    
             </pre>
           </blockquote>
-          <p><a href="housefire.html" class="button">Read Poem 3</a></p>
+          <p><a href="housefire.html" class="poem-link">Read Full Poem →</a></p>
         </section>
 
         <section style="margin-bottom: 3rem;">
-          <h2>the frost</h2>
-          <p>Internal rhymes and structural changes show how the reader comes to a realization about a loss</p>
+          <h2 class="poem-snapshot-title">the frost</h2>
+          <p class="poem-blurb">the speaker comes to terms with a difficult loss</p>
           <blockquote class="poem-snapshot">
             <pre>
-              
+
             You crept in like the frost that signals the beginning of a long winter
             I looked at you with the same wonder that I save for the stars
             At first you were so delicate – so beautiful – in shards
@@ -122,8 +122,8 @@
             the cold ground bruised my knees
             </pre>
           </blockquote>
-          <p><a href="thefrost.html" class="button">Read Poem 4</a></p>
-          <p><a href="index.html" class="button">← Back to Home</a></p></p>
+          <p><a href="thefrost.html" class="poem-link">Read Full Poem →</a></p>
+          <p><a href="index.html" class="button">← Home</a></p></p>
         </section>
 
       </div>
