--- a/thefrost.html
+++ b/thefrost.html
@@ -51,8 +51,8 @@
         </article>
 
         <div style="margin-top: 2rem;">
-          <a href="project5.html" class="button" style="margin-right: 1rem;">← Back to Poems Showcase</a>
-          <a href="index.html" class="button">← Back to Home</a>
+          <a href="poetryshowcase.html" class="button" style="margin-right: 1rem;">← Back to Poems</a>
+          <a href="index.html" class="button">← Home</a>
         </div>
       </div>
     </div>
