--- a/crimeinChicago.html
+++ b/crimeinChicago.html
@@ -68,7 +68,7 @@
                       <li>Abhay Gupta</li>
                       <li>Emily Fu</li>
                     </ul>
-					<a href="index.html" class="button">← Back to Projects</a>
+					<a href="index.html" class="button">← Home</a>
                 
 				</div>
 			</div>
