--- a/educationandfutureearnings.html
+++ b/educationandfutureearnings.html
@@ -79,7 +79,7 @@
                     <ul>
                       <li>Anushna Bardhan</li>
                     </ul>
-					<a href="index.html" class="button">← Back to Projects</a>
+					<a href="index.html" class="button">← Home</a>
                 
 				</div>
 			</div>
