--- a/mymusic.html
+++ b/mymusic.html
@@ -81,7 +81,7 @@
               </a>
         </p>
 
-        <a href="index.html" class="button">← Back to Projects</a>
+        <a href="index.html" class="button">← Home</a>
 
       </div>
     </div>
