--- a/whatremainsofus.html
+++ b/whatremainsofus.html
@@ -71,8 +71,8 @@ Over the line I shouldn’t cross
         </article>
 
         <div style="margin-top: 2rem;">
-          <a href="project5.html" class="button" style="margin-right: 1rem;">← Back to Poems Showcase</a>
-          <a href="index.html" class="button">← Back to Home</a>
+          <a href="poetryshowcase.html" class="button" style="margin-right: 1rem;">← Back to Poems</a>
+          <a href="index.html" class="button">← Home</a>
         </div>
       </div>
     </div>
