more aesthetic changes (lines, etc.)

--- a/index.html
+++ b/index.html
@@ -52,19 +52,22 @@
 						<div class="inner">
 							<header>
 								<h1>Hi, I'm Faith! This is where I share the things I've created,
-								from data projects to music, writing, and more. <br />
+								from data projects to music, writing, and more. 
 								Feel free to explore and see what I've been working on :) </a></h1>
 							</header>
-							<h2 style="text-align: center;">Data Analysis Projects</h2>
+							<hr class="section-divider" />
+							<h2 style="text-align: center;">Data & Analytics Projects</h2>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="gamblingbehaviorsinadolescents.html">
-										<h2>Gambling Addiction in High School Students</h2>
+										<h2>Gambling Behavior in High School Students</h2>
 										<div class="content">
-											<p>This research paper I co-authored for ECON3120 examines various biological and socioeconomic factors that may contribute to gambling behaviors in adolescents.</p>
+											<p>
+												In this project, I explore both innate factors like gender and age and environmental factors like socioeconomic status to analyze their influence on gambling behavior in high school students. Using regression analysis and EDA, I examine which factors significantly influence gambling behavior to inform policy decisions and improve prevention efforts.
+											</p>
 										</div>
 									</a>
 								</article>
@@ -75,7 +78,8 @@
 									<a href="educationandfutureearnings.html">
 										<h2>The Impact of Undergraduate Education on Future Earnings</h2>
 										<div class="content">
-											<p>This term paper written for ORIE3120 aims to assess what factors in undergraduate education have an impact on income.</p>
+											<p>In this term paper, I analyze how factors like university choice, tuition, enrollment, diversity impact mid-career salaries. Using regression models, data cleaning, and visualization, I explore the possibility of predicting future financial outcomes based on undergraduate university characteristics.
+											</p>
 										</div>
 									</a>
 								</article>
@@ -86,7 +90,7 @@
 									<a href="crimeinChicago.html">
 										<h2>Crime in Chicago</h2>
 										<div class="content">
-											<p>This Data Science Project explores various factors that contribute to crime rates across districts in Chicago.</p>
+											<p>This research project examines how educational attainment, race, and seasonal factors influence gun violence rates and victimization risks, using regression models to analyze yearly trends, racial disparities, and monthly variations in gun-related incidents.</p>
 										</div>
 									</a>
 								</article>
@@ -94,7 +98,7 @@
 							<p>
 
 
-								
+						<hr class="section-divider" />	
 
 							</p>
 							<h2 style="text-align: center;">Personal</h2>
