more aesthetic line changes

--- a/crimeinChicago.html
+++ b/crimeinChicago.html
@@ -55,6 +55,7 @@
                     <span class="image main"><img src="images/table5include.png" alt="assumptions" /></span>
                     <p>
                     <span class="image main"><img src="images/table6include.png" alt="linear regression" /></span>
+					<hr class="section-divider" />
 					<h2>Tools & Methods</h2>
 					<ul>
 						<li>Python (pandas, numpy, statsmodels, matplotlib)</li>
