--- a/educationandfutureearnings.html
+++ b/educationandfutureearnings.html
@@ -68,6 +68,7 @@
                     <p>
                         This project evaluated model accuracy in predicting future wealth using two ROC curves. The in-sample curve shows performance on the training data, while the second uses a 60/40 train-test split. Both curves have an AUC of 0.97, indicating strong predictive ability. However, the high in-sample score suggests overfitting, and the limited test data size affects the reliability of results. Future analysis with larger datasets and cross-validation is recommended to improve model robustness. Despite limitations, the model performs well given the available data.
                     </p>
+					<hr class="section-divider" />
 					<h2>Tools & Methods</h2>
 					<ul>
 						<li>Python (pandas, numpy, statsmodels, matplotlib)</li>
