--- a/gamblingbehaviorsinadolescents.html
+++ b/gamblingbehaviorsinadolescents.html
@@ -55,6 +55,7 @@
 					</p>
                     <span class="image main"><img src="images/table1include.png" alt="Dependent Variables Used" /></span>
                     <span class="image main"><img src="images/table2include.png" alt="Sample Regression Results" /></span>
+					<hr class="section-divider" />
 					<h2>Tools & Methods</h2>
 					<ul>
 						<li>Stata</li>
