more title stuff

--- a/gamblingbehaviorsinadolescents.html
+++ b/gamblingbehaviorsinadolescents.html
@@ -46,7 +46,7 @@
 			<!-- Main -->
 			<div id="main">
 				<div class="inner">
-					<h1>Exploring Gambling Behaviors in High School Students</h1>
+					<h1>Exploring Gambling Behavior in High School Students</h1>
 					<p>
 						This project examines how nature and nurture influence high school students’ likelihood to gamble. The findings have important policy implications, inform prevention programs, and help identify which student groups are linked to risky behaviors.
 					</p>
