--- a/mymusic.html
+++ b/mymusic.html
@@ -49,7 +49,7 @@
         <h1>My Music</h1>
         
         <section style="margin-bottom: 3rem;">
-            <h2>Windows</h2>
+            <h2 class = poem-snapshot-title>Windows</h2>
             <p>Windows is one of the first songs I ever wrote. It was during the pandemic when I was in high school and is meant to highlight how lonely you feel when you look into the windows of other people's lives instead of actively being a part of them.</p>
             <iframe
               src="https://open.spotify.com/embed/track/10d0M8hJIf5SvvsS7jCDSC?utm_source=generator"
@@ -63,7 +63,7 @@
           </section>          
 
         <section style="margin-bottom: 3rem;">
-            <h2>Dandelion</h2>
+            <h2 class = poem-snapshot-title>Dandelion</h2>
             <p>I wrote this piece after reading Ray Bradbury's work "Fahrenheit 451". Despite not enjoying the book, it left quite an impression on me, and this song is meant to show how love and emotion are what make life worth living.</p>
             <iframe
               src="https://open.spotify.com/embed/track/2sytcJL0Q8ZT59bATZlBrk?utm_source=generator"
@@ -76,9 +76,9 @@
             </iframe>
           </section>
         <p style="text-align:center; margin-top: 2rem;">
-            <a href="https://open.spotify.com/artist/1oozqZ7yIxiAiHS7m3ctyQ?si=RQxBj-D8TAaTjxzkEJgHLA" target="_blank" class="button">
-                Visit my full Spotify profile
-              </a>
+          <a href="https://open.spotify.com/artist/1oozqZ7yIxiAiHS7m3ctyQ?si=RQxBj-D8TAaTjxzkEJgHLA" target="_blank" style="color: #0a84ff; text-decoration: none;">
+            Visit my full Spotify profile →
+          </a>          
         </p>
 
         <a href="index.html" class="button">← Home</a>
