--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<a href="poetryshowcase.html">
 										<h2>Poetry</h2>
 										<div class="content">
-											<p>Poems + song lyrics</p>
+											<p>Poetry & song lyrics</p>
 										</div>
 									</a>
 								</article>
@@ -145,7 +145,7 @@
 								<ul class="icons">
 									<li><a href="https://www.instagram.com/faithie_xy/" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 									<li><a href="https://www.linkedin.com/in/faith-guan/" class="icon brands style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label" target="_blank">GitHub</span></a></li>
+									<!-- <li><a href="#" class="icon brands style2 fa-github"><span class="label" target="_blank">GitHub</span></a></li> -->
 									<li>
 										<!-- <span class="icon solid style2 fa-envelope"></span> -->
 										fsg27@cornell.edu
