reg image + overview for project 1

--- a/gamblingbehaviorsinadolescents.html
+++ b/gamblingbehaviorsinadolescents.html
@@ -47,13 +47,18 @@
 			<div id="main">
 				<div class="inner">
 					<h1>Exploring Gambling Behavior in High School Students</h1>
+					<h2> Project Overview</h2>
 					<p>
-						This project examines how nature and nurture influence high school students’ likelihood to gamble. The findings have important policy implications, inform prevention programs, and help identify which student groups are linked to risky behaviors.
-					</p>
-					<p>
+						In this project, I examined how nature and nurture influence high school students’ likelihood to gamble. The findings have important policy implications, inform prevention programs, and help identify which student groups are linked to risky behaviors.
 						The 2006 High School Risk Survey, the primary dataset used in this project, includes data from about 4,500 students across 10 Connecticut public high schools. It captures their attitudes toward risk and risky behaviors and represents the broader population of U.S. public high school students in 2006. Stata and Excel were used to analyze and visualize the data.
 					</p>
-                    <span class="image main"><img src="images/table1include.png" alt="Dependent Variables Used" /></span>
+					<h2>
+						Analysis
+					</h2>
+					<p>
+						The linear regression models focus on predicting the number of hours adolescents spend gambling per week. Model 2 looks specifically at environmental factors such as family income, gambling education, part-time job status, and exposure to adult gambling while controlling for drug use. The results show that teens from middle and high-income families tend to gamble less than those from lower-income families. Having a part-time job is also linked to reduced gambling hours. Exposure to adults talking about gambling is associated with increased gambling time. Drug use increases gambling hours and is included as a control to minimize omitted variable bias.
+					</p>
+                    <span class="image main"><img src="OLSregresults.png" alt="Linear Regression Results" /></span>
                     <span class="image main"><img src="images/table2include.png" alt="Sample Regression Results" /></span>
 					<hr class="section-divider" />
 					<h2>Tools & Methods</h2>
